--- a/css/links.css
+++ b/css/links.css
@@ -12,3 +12,13 @@
   font-size: 3em;
   font-weight: 300;
 }
+
+@media only screen and (max-width: 768px) {
+  .card-icon {
+    font-size: 1.5em;
+  }
+
+  .card-title {
+    font-size: 1.5em;
+  }
+}
